get classroom_stats onto website through javascript, make header items, still unrendered

--- a/src/tc-workspace.ipynb
+++ b/src/tc-workspace.ipynb
@@ -12,6 +12,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "classroom_stats = pd.read_csv('../data/classroom_stats.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classroom_id=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classroom_stat = classroom_stats.loc(int(classroom_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
