refactor in MORE code, not yet insured functional

--- a/src/tc-eda.ipynb
+++ b/src/tc-eda.ipynb
@@ -2119,9 +2119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoostClassifier(algorithm='SAMME.R', base_estimator=None,\n",
+      "          learning_rate=1.0, n_estimators=50, random_state=None)\n"
+     ]
+    }
+   ],
    "source": [
     "import pprint, pickle\n",
     "pkl_file = open('ada_boost_classifier.pkl', 'rb')\n",
