add all 10 functions into 0_run_all.py

--- a/src/tc-eda.ipynb
+++ b/src/tc-eda.ipynb
@@ -2369,7 +2369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classroom_stats_with_danger_index.to_csv('../data/classroom_stats_w_danger_index.csv')"
+    "# classroom_stats_with_danger_index.to_csv('../data/classroom_stats_w_danger_index.csv')"
    ]
   },
   {
