--- a/src/tc-eda.ipynb
+++ b/src/tc-eda.ipynb
@@ -1558,6 +1558,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "classroom_id  year_month\n",
+       "1             1908-10-01      0\n",
+       "              1917-01-01      0\n",
+       "              1917-03-01      0\n",
+       "              2002-01-01      0\n",
+       "              2007-10-01      0\n",
+       "              2010-11-01      0\n",
+       "              2011-09-01      0\n",
+       "              2011-12-01     16\n",
+       "              2012-01-01    167\n",
+       "              2012-02-01    262\n",
+       "              2012-03-01    292\n",
+       "              2012-04-01    173\n",
+       "              2012-05-01    199\n",
+       "              2012-06-01     77\n",
+       "              2012-07-01    200\n",
+       "              2012-08-01    114\n",
+       "              2012-09-01    330\n",
+       "              2012-10-01    237\n",
+       "              2012-11-01    215\n",
+       "              2012-12-01    168\n",
+       "              2013-01-01    224\n",
+       "              2013-02-01    238\n",
+       "              2013-03-01    164\n",
+       "              2013-04-01    367\n",
+       "              2013-05-01    415\n",
+       "              2013-06-01    260\n",
+       "              2013-07-01     63\n",
+       "              2013-08-01    118\n",
+       "              2013-09-01    423\n",
+       "              2013-10-01    360\n",
+       "                           ... \n",
+       "3862          2016-04-01      0\n",
+       "              2016-05-01      0\n",
+       "              2016-06-01      0\n",
+       "              2016-07-01      0\n",
+       "              2016-08-01      0\n",
+       "              2016-09-01      0\n",
+       "              2016-10-01      0\n",
+       "              2016-11-01      0\n",
+       "              2016-12-01      0\n",
+       "              2017-01-01      0\n",
+       "              2017-02-01      0\n",
+       "              2017-03-01      0\n",
+       "              2017-04-01      0\n",
+       "              2017-05-01      0\n",
+       "              2017-06-01      0\n",
+       "              2017-07-01      0\n",
+       "              2017-08-01      0\n",
+       "              2017-09-01      0\n",
+       "              2017-10-01      0\n",
+       "              2017-11-01      0\n",
+       "              2017-12-01      0\n",
+       "              2018-01-01      0\n",
+       "              2018-02-01      0\n",
+       "              2018-03-01      1\n",
+       "              2018-04-01      0\n",
+       "              2018-06-01      0\n",
+       "              2018-09-01      0\n",
+       "              2018-11-01      0\n",
+       "              2018-12-01      0\n",
+       "              2020-08-01      0\n",
+       "Length: 230510, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_month_posts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -3429,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3496,6 +3578,54 @@
    "source": [
     "classrooms.classroom_id.values[:102]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(11+3)%11 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
